<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/entrantMainLayout"
    android:orientation="vertical"
    android:layout_margin="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/baseline_mail_outline_24"
            android:id="@+id/notificationBtn"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">
        </Button>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/qrCodeBtn"
            android:background="@drawable/baseline_qr_code_scanner_24"
            android:layout_gravity="start"
            android:layout_marginStart="45dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Events"
            android:paddingHorizontal="40dp"
            android:paddingVertical="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/login_signup_custom_edittext"
            android:layout_centerInParent="true"
            android:textColor="@color/black">
        </TextView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/updateProfileImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/circular_image_background"
            android:focusable="true"
            android:src="@drawable/baseline_person_outline_24"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:shapeAppearanceOverlay="@style/CircularImageView"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/entrantMainswipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/entrantMainEventView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>
</LinearLayout>

