<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notificationMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entrant.NotificationActivity"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/baseline_arrow_back_ios_new_24"
            android:id="@+id/notificationActivityBackBtn"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notifications"
            android:paddingHorizontal="40dp"
            android:paddingVertical="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/login_signup_custom_edittext"
            android:layout_centerInParent="true"
            android:textColor="@color/black">
        </TextView>

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:id="@+id/notificationList"/>

</LinearLayout>