<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.UpdateProfileActivity"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/login_signup_custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Profile"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textColor="@color/btn_color"
                android:textStyle="bold"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/updateProfilePicture"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_person_outline_24"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/circular_image_background"
                android:contentDescription="Profile Picture"
                app:shapeAppearanceOverlay="@style/CircularImageView"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/removeProfileBtn"
                android:text="Remove Profile Picture"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/btn_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/updateFirstName"
                android:background="@drawable/login_signup_custom_edittext"
                android:padding="8dp"
                android:layout_marginTop="25dp"
                android:hint="Firstname"
                android:textColor="@color/black"
                android:paddingStart="20dp">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/updateLastName"
                android:background="@drawable/login_signup_custom_edittext"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:hint="Lastname"
                android:textColor="@color/black"
                android:paddingStart="20dp">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/updateEmail"
                android:background="@drawable/login_signup_custom_edittext"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:hint="Email"
                android:textColor="@color/black"
                android:paddingStart="20dp">

            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/updateBtn"
                android:text="Update"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/btn_color"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelUpdateText"
                android:text="Cancel"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:textColor="@color/btn_color"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>