...
                android:textSize="28sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/browseFacilitiesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Facilities"
                android:textSize="28sp"
                android:background="@drawable/my_drawable"
                android:paddingVertical="3dp">
...
